--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "core-js": "^3.1.4",
     "gatsby": "^2.13.12",
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-manifest": "^2.2.1",
